# full-stack-rust

./: .gitignore  Cargo.toml  README.md
authz/: abac_model.conf  abac_policy.csv
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/resources/: about.txt
frontend/src/: abandon_confirmation_modal.rs  button.rs  hero.rs  main.rs  navbar.rs  panel.rs  tiles.rs
server/: Cargo.toml
server/migrations/2022-12-28-053533_create_queue/: down.sql  up.sql
server/src/: auth.rs  database.rs  handlers.rs  main.rs  schema.rs
