[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
sycamore = {version = "0.8", features = ["suspense"]}
#reqwest = "0.11.12"
gloo-net = "0.2.5"
futures = "0.3.25"
gloo-console = "0.2.3"
sycamore-router = "0.8"
serde_json = "1.0.91"
serde = "1.0.152"
common = {path="../common"}
