[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
actix-web = "4"
env_logger = "0.9.0"
log = "0.4"
actix-files = "0.6.2"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
tokio = {version = "1.20.0", features = ["full"]}
openidconnect = "2.3.2"
serde = { version = "1.0", features = ["derive"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
]