[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
actix-web = "4"
env_logger = "0.9.0"
log = "0.4"
actix-files = "0.6.2"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
actix-web-lab = "0.18.8"
tokio = {version = "1.20.0", features = ["full"]}
openidconnect = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
casbin = { version = "2.0.9", features = ["logging"] }
serde_json = "1.0.91"
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "chrono"] }
chrono = "0.4.23"
common = {path="../common"}

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
]